--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Lora&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Lora, serif;
 }
 
 a {
@@ -13,6 +14,7 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: Lora, serif;
 }
 
 @media (prefers-color-scheme: dark) {
