--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Lora&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora&family=Inter:wght@400;600&display=swap");
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Lora, serif;
+  /* font-family: Lora, serif; */
+  background-color: white;
 }
 
 a {
@@ -14,9 +15,9 @@ a {
 
 * {
   box-sizing: border-box;
-  font-family: Lora, serif;
+  /* font-family: Lora, serif; */
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -25,4 +26,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
